Refac (GameLevel/GameWorld merge)